kubernetes/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: nombinome1-nombinome2
spec:
  selector:
    app: rabbitmq
  ports:
  - protocol: TCP
    port: 5672
    targetPort: 5672
  type: ClusterIP
